[package]
name = "testaroo"
version = "0.1.0"
authors = ["Patrick MARIE <pm@mkz.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4"
serde_derive = "1.0.37"
serde = "1.0.37"

bitcoincore-rpc = "0.11.0"
prometheus_exporter_base = "0.31.0"
tokio = { version = "0.2", features = ["macros"] }
